Prevent hero content appearing behind image

--- a/client/scss/components/_exhibition_hero.scss
+++ b/client/scss/components/_exhibition_hero.scss
@@ -23,6 +23,8 @@
 }
 
 .exhibition-hero__copy {
+  position: relative;
+  
   @include respond-to('large') {
     display: flex;
     align-items: center;
